# kedro-tf-text

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
conf/base/: catalog.yml
conf/base/parameters/: bert.yml  cnn.yml  preprocess.yml  tabular.yml
data/01_raw/: test_dataset.csv  test_report.csv
docs/source/: conf.py  index.rst
notes/: notes.md  old-bert.py  old_code.py  padding.md  sample-embedding-code.py
src/: requirements.txt  setup.py
src/kedro_tf_text/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_tf_text/extras/datasets/: bert_model_download.py
src/kedro_tf_text/pipelines/bert/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_text/pipelines/cnn/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_text/pipelines/preprocess/: nodes.py  pipeline.py
src/kedro_tf_text/pipelines/tabular/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/bert/: test_pipeline.py
src/tests/pipelines/cnn/: test_pipeline.py
src/tests/pipelines/preprocess/: test_pipeline.py
src/tests/pipelines/tabular/: test_pipeline.py
