[project]
name = "kedro_tf_text"
version = "0.1"
description = "Text processing pipelines"
authors = [
    "Bell Eapen <github@gulfdoctor.net>"
]
license = "gpl v3"
readme = "README.md"
python = "^3.8"
homepage = "https://nuchange.ca"
repository = "https://github.com/dermatologist/kedro-tf-text"
documentation = "https://github.com/dermatologist/kedro-tf-text"

keywords = ["ML", "AI", "NLP"]

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.kedro]
package_name = "kedro_tf_text"
project_name = "Kedro Tf Text"
project_version = "0.18.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_tf_text -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
