[project]
name = "kedro_tf_text"
version = "1.0.0"

[tool.kedro]
package_name = "kedro_tf_text"
project_name = "Kedro Tf Text"
project_version = "0.18.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_tf_text -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
